# translator-ingests

./: Jenkinsfile  Makefile  README.md  check_source_needs_update.py  justfile  pyproject.toml
.github/workflows/: codespell.yaml
src/translator_ingest/: pipeline.py
src/translator_ingest/ingests/ctd/: ctd.py
src/translator_ingest/ingests/drugcentral/: drugcentral_rig.yaml  mappings.py
src/translator_ingest/ingests/gene2phenotype/: data-playground.ipynb  gene2phenotype.py  gene2phenotype.yaml  parser-writing.ipynb
src/translator_ingest/ingests/gtopdb/: gtopdb.py  gtopdb_rig.yaml
src/translator_ingest/ingests/panther/: panther_rig.yaml
src/translator_ingest/ingests/semmeddb/: semmeddb.py  semmeddb.yaml  semmeddb_analysis.ipynb  semmeddb_rig.yaml
src/translator_ingest/ingests/signor/: signor.py  signor_rig.yaml
src/translator_ingest/util/storage/: s3.py
tests/unit/ingests/semmeddb/: test_semmeddb.py
