[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "bridge"
dynamic = ["version"]
description = "Translator Phase 3 Data Ingest Pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "biolink-model", # need to pull 'master' for now, until dust settles on ingest-related model revisions
    "bmt", # need to pull 'master' for now, until a fresh release past 1.4.6
    "click>=8.0.0",
    "codespell>=2.4.1",
    "deepdiff>=8.6.1",
    "hatchling",
    "kghub-downloader==0.4.3",
    "koza>=2.1.1",
    "mkdocs-minify-plugin>=0.8.0",
    "openpyxl",      # for pandas read_excel to work, needed for specific ingest
    "pandas==2.3.3",    # also installs numpy, used by some ingests
    "psycopg[binary]",     # for Postgres querying, needed for specific ingest
    "polars>=1.35.2",
    "requests",    ## needed for specific ingest
    "robokop-orion",
    "uv-dynamic-versioning>=0.11.2",
    "xmltodict>=1.0.2",
    "zstandard>=0.25.0"
]

[project.scripts]
validate-kgx = "translator_ingest.util.validate_kgx:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "black>=24.1.0",
    "codespell>=2.2.0",
    "ruff>=0.12.8",
    # for CX notebook support: I use an old version that works with extensions
    "nbclassic",
    "jupyter_contrib_nbextensions",
    "jsonlines",
    "resource-ingest-guide-schema",
    # Documentation dependencies
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "biolink-model",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["*.ipynb"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.uv]
package = true

[tool.uv.sources]
biolink-model = { git = "https://github.com/biolink/biolink-model.git", rev = "master" }
bmt = { git = "https://github.com/biolink/biolink-model-toolkit.git", rev = "master" }

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/translator_ingest"]

[tool.codespell]
skip = [
    "./src/translator_ingest/ingests/drug_rep_hub/indications_config.json",
    "./src/translator_ingest/ingests/drug_rep_hub/target_config.json",
    # Jupyter notebooks: JSON cell outputs embed base64 plot data (spurious "word" matches),
    # and truncated pandas/HTML previews often break words mid-token (false typos). Same skip as Makefile CODESPELL_SKIP.
    "**/*.ipynb",
]
